# wz-publish-test

./: Cargo.toml  LICENSE.md  README.md
src/: lib.rs
